istio-service-mesh/destinationrules/02-api-gateway-service-dr.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: api-gateway-service
  namespace: nutriai-mesh
spec:
  host: api-gateway-service.nutriai-mesh.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
